k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: collabnote
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http  
      port: 5000
      targetPort: 5000
